[tool.poetry]
name = "itineride"
version = "0.1.0"
description = ""
authors = ["Mauricio Pavani <mauricio_pavani@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.14.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
respx = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
blue = "blue ."
isort = "isort ."
lint = "task blue && task isort"
cov = "pytest --cov=itineride tests/ --cov-report=html"
pre_test = "task lint"
test = "pytest -v"
post_test = "task cov"